Fixed z-index handling. Added transition for tooltip.

--- a/src/assets/styles/flashflex/row.scss
+++ b/src/assets/styles/flashflex/row.scss
@@ -12,7 +12,8 @@
     position: relative;
     margin: 0;
     padding: 0;
-    z-index: 1000;
+    // z-index: 1000;
+    z-index: z('default');
 
     &, &.right {
         &:after {
